HVAC Backup 2/objects/Service_Area_Routing__c.object
<CustomObject>
    <fields>
        <fullName>CP_Code__c</fullName>
        <formula>Channel_Partner__r.CP_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Breakdown</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Enquiry</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>PMS</fullName>
                </value>
                <value>
                    <fullName>Regular Service</fullName>
                </value>
                <value>
                    <fullName>Stock Defective</fullName>
                </value>
                <value>
                    <fullName>PDI</fullName>
                    <label>Predispatch Inspection</label>
                </value>
                <value>
                    <fullName>PDINotRequired</fullName>
                    <label>PDI</label>
                </value>
                <value>
                    <fullName>Install</fullName>
                    <isActive>false</isActive>
                    <label>Install</label>
                </value>
                <value>
                    <fullName>Installationation</fullName>
                    <isActive>false</isActive>
                    <label>Installationation</label>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                    <isActive>false</isActive>
                    <label>Maintenance</label>
                </value>
                <value>
                    <fullName>Repair</fullName>
                    <isActive>false</isActive>
                    <label>Repair</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Area Routing</relationshipLabel>
        <relationshipName>Service_Area_Routing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Number__c</fullName>
        <formula>Department__r.Department_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Service Area Routing</relationshipLabel>
        <relationshipName>Service_Area_Routing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pincode_Value__c</fullName>
        <formula>Pincode__r.Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pincode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pincode</label>
        <referenceTo>PinCode__c</referenceTo>
        <relationshipLabel>Service Area Routing</relationshipLabel>
        <relationshipName>Service_Area_Routing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family_Code__c</fullName>
        <formula>Product_Family__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Service Area Routing</relationshipLabel>
        <relationshipName>Service_Area_Routing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sector_Formula__c</fullName>
        <formula>SUBSTITUTE( Sector__c , &quot; &quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sector Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DPPCE</fullName>
                </value>
                <value>
                    <fullName>DPCE</fullName>
                </value>
                <value>
                    <fullName>DPSE</fullName>
                </value>
                <value>
                    <fullName>DPE</fullName>
                </value>
                <value>
                    <fullName>DPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <formula>CP_Code__c+&quot;:&quot;+Department_Number__c+&quot;:&quot;+Product_Family_Code__c+&quot;:&quot;+Pincode_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Key</label>
        <type>Text</type>
    </fields>
    <label>Service Area Routing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>CP_Code__c</columns>
        <columns>Channel_Partner__c</columns>
        <columns>Department__c</columns>
        <columns>Pincode_Value__c</columns>
        <columns>Sector__c</columns>
        <columns>Product_Family_Code__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Call_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SAR-{00000000}</displayFormat>
        <label>Service Area Routing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Area Routing</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>